[gd_scene load_steps=7 format=3 uid="uid://bu5x53q1ggvdr"]

[ext_resource type="Texture2D" uid="uid://che6nifmou86t" path="res://UI/JournalScene/journal.png" id="1_3qhr3"]
[ext_resource type="Script" path="res://UI/JournalScene/Journal/journal.gd" id="1_e0wjw"]
[ext_resource type="Texture2D" uid="uid://cp24vf1dyuc5t" path="res://UI/JournalScene/arrow_left.png" id="2_2kd72"]
[ext_resource type="FontFile" uid="uid://qxc36i5l7jjy" path="res://UI/JournalScene/VCR_OSD_MONO_1.001.ttf" id="2_c4v05"]
[ext_resource type="Texture2D" uid="uid://65i5dlsuqf6q" path="res://UI/JournalScene/journal background.png" id="2_xsdpd"]
[ext_resource type="Texture2D" uid="uid://bjp4rdgp6e5xu" path="res://UI/JournalScene/arrow_right.png" id="4_fmr4h"]

[node name="Journal" type="Node2D"]
script = ExtResource("1_e0wjw")

[node name="Black Background" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.294118)
position = Vector2(576.5, 324.5)
scale = Vector2(0.842606, 0.842448)
texture = ExtResource("2_xsdpd")

[node name="Label" type="Label" parent="."]
texture_filter = 2
offset_left = 473.0
offset_top = 30.0
offset_right = 683.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("2_c4v05")
theme_override_font_sizes/font_size = 24
text = "Click to close."

[node name="Label2" type="Label" parent="."]
texture_filter = 2
offset_left = 473.0
offset_top = 594.0
offset_right = 683.0
offset_bottom = 617.0
theme_override_fonts/font = ExtResource("2_c4v05")
theme_override_font_sizes/font_size = 24
text = "Click to close."

[node name="ImageContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="ImageContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Left Arrow Image" type="TextureRect" parent="ImageContainer/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(60, 136)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_2kd72")
expand_mode = 1
stretch_mode = 2

[node name="Journal Image" type="TextureRect" parent="ImageContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
texture = ExtResource("1_3qhr3")
expand_mode = 1

[node name="Right Arrow Image" type="TextureRect" parent="ImageContainer/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(60, 136)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_fmr4h")
expand_mode = 1
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ImageContainer"]
layout_mode = 2

[node name="JournalContainer" type="MarginContainer" parent="."]
offset_top = 2.0
offset_right = 1152.0
offset_bottom = 651.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="JournalContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Exit Journal" type="Button" parent="JournalContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Well this is an exit button!"

[node name="HBoxContainer" type="HBoxContainer" parent="JournalContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Left Arrow" type="Button" parent="JournalContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Left arrow"

[node name="Left Page" type="VBoxContainer" parent="JournalContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="JournalContainer/VBoxContainer/HBoxContainer/Left Page"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4v05")
theme_override_font_sizes/font_size = 24
text = "Curse of the Example Curse"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Separator" type="Control" parent="JournalContainer/VBoxContainer/HBoxContainer/Left Page"]
layout_mode = 2

[node name="Label" type="Label" parent="JournalContainer/VBoxContainer/HBoxContainer/Left Page"]
custom_minimum_size = Vector2(430, 420)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4v05")
theme_override_font_sizes/font_size = 18
text = "ORIGIN:
This curse only comes to those who need some lorem ipsum in order to get some text formatting going.

SYMPTOMS:
Large amounts of text that aren't really saying anything at all, just kinda, being there, you know? Like when the text is texting, and the words are wording, and you just know that something feels a little too... off about it? Like someone's just trying to extend a word limit so they can look at a page and their brain goes \"Huh, there's words here,\" but it doesn't really mean anything?"
autowrap_mode = 3

[node name="Separator" type="Control" parent="JournalContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Right Page" type="VBoxContainer" parent="JournalContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="JournalContainer/VBoxContainer/HBoxContainer/Right Page"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4v05")
theme_override_font_sizes/font_size = 24
text = "Curse of the Same Curse"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Separator" type="Control" parent="JournalContainer/VBoxContainer/HBoxContainer/Right Page"]
layout_mode = 2

[node name="Label" type="Label" parent="JournalContainer/VBoxContainer/HBoxContainer/Right Page"]
custom_minimum_size = Vector2(430, 420)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4v05")
theme_override_font_sizes/font_size = 18
text = "ORIGIN:
This curse only comes to those who need some lorem ipsum in order to get some text formatting going.

SYMPTOMS:
Large amounts of text that aren't really saying anything at all, just kinda, being there, you know? Like when the text is texting, and the words are wording, and you just know that something feels a little too... off about it? Like someone's just trying to extend a word limit so they can look at a page and their brain goes \"Huh, there's words here,\" but it doesn't really mean anything?"
autowrap_mode = 3

[node name="Right Arrow" type="Button" parent="JournalContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Right arrow"

[node name="Exit Journal2" type="Button" parent="JournalContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Well this is an exit button!"

[connection signal="pressed" from="JournalContainer/VBoxContainer/Exit Journal" to="." method="_on_exit_journal_pressed"]
[connection signal="pressed" from="JournalContainer/VBoxContainer/HBoxContainer/Left Arrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="JournalContainer/VBoxContainer/HBoxContainer/Right Arrow" to="." method="_on_right_arrow_pressed"]
[connection signal="pressed" from="JournalContainer/VBoxContainer/Exit Journal2" to="." method="_on_exit_journal_2_pressed"]
